# e2e-test-20260208-152824

./: pyproject.toml
.research/: research_history.json
config/: config.yaml
config/runs/: comparative-1-qwen3-4b-gsm8k.yaml  proposed-qwen3-4b-gsm8k.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
